--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./scss/style.scss" />
-    <title>Parcel by Merge</title>
+    <title>Merge Academy students</title>
   </head>
   <body>
+    <div class="section-students">
+      <div class="section-students__header">
+        <h1 class="title container">Merge Academy students</h1>
+      </div>
+      <div class="students container"></div>
+    </div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
