--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./scss/style.scss" />
-    <title>Parcel by Merge</title>
+    <title>Merge Academy students</title>
   </head>
   <body>
     <script type="module" src="./index.js"></script>
