--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="./scss/style.scss" />
     <title>Merge Academy students</title>
   </head>
+  <style>
+    html {
+      background-color: darkblue;
+    }
+  </style>
   <body>
     <div class="section-students">
       <div class="section-students__header">
