--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./scss/style.scss" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Merge Academy students</title>
   </head>
   <body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <div class="section-students">
       <div class="section-students__header">
         <div class="section-students__header-inner container">
-          <h1 class="title">Merge Academy students</h1>
-          <div class="switch">
+          <h1
+            data-aos="fade-right"
+            data-aos-duration="3000"
+            data-aos-delay="1000"
+            class="title"
+          >
+            Merge Academy students
+          </h1>
+          <div
+            data-aos="fade-down"
+            data-aos-duration="1500"
+            data-aos-delay="1000"
+            class="switch"
+          >
             <svg
+              data-aos="fade-down-left"
+              data-aos-duration="2500"
+              data-aos-delay="1000"
               class="switch__light"
               width="24"
               height="24"
@@ -25,6 +45,9 @@
             </svg>
             <span class="switch__button"></span>
             <svg
+              data-aos="fade-down-right"
+              data-aos-duration="2500"
+              data-aos-delay="1000"
               class="switch__dark"
               width="24"
               height="24"
