--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div class="section-students__header">
         <h1 class="title container">Merge Academy students</h1>
       </div>
-      <div class="students container"></div>
+      <div id="students" class="students container"></div>
     </div>
     <script type="module" src="./index.js"></script>
   </body>
