--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,13 @@
     <div class="section-students">
       <div class="section-students__header">
         <div class="section-students__header-inner container">
-          <h1
-            data-aos="fade-right"
-            data-aos-duration="3000"
-            data-aos-delay="1000"
-            class="title"
-          >
+          <h1 data-aos="fade-right" data-aos-duration="1000" class="title">
             Merge Academy students
           </h1>
-          <label
-            data-aos="fade-down"
-            data-aos-duration="1500"
-            data-aos-delay="1000"
-            class="switch"
-          >
+          <label data-aos="fade-down" data-aos-duration="1000" class="switch">
             <svg
               data-aos="fade-down-left"
-              data-aos-duration="2500"
-              data-aos-delay="1000"
+              data-aos-duration="1000"
               class="switch__light"
               width="24"
               height="24"
@@ -49,8 +38,7 @@
             </span>
             <svg
               data-aos="fade-down-right"
-              data-aos-duration="2500"
-              data-aos-delay="1000"
+              data-aos-duration="1000"
               class="switch__dark"
               width="24"
               height="24"
